<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/match_data_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >
        <TextView
            android:id="@+id/match_layout_match_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
        <LinearLayout
            android:id="@+id/team_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/match_layout_team_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="start">
                <ImageView
                    android:id="@+id/match_layout_team_1_flag"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/team_flag" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/match_layout_team_1score"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/match_layout_team_1_overs"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="12sp"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/match_layout_team_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="end">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="center"
                    >
                    <TextView
                        android:id="@+id/match_layout_team_2_score"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/match_layout_team_2_overs"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="12sp"/>

                </LinearLayout>
                <ImageView
                    android:id="@+id/match_layout_team_2_flag"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/team_flag" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/match_layout_team_1_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/vs"
                android:gravity="center"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/match_layout_team_2_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="end"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/match_layout_match_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />

        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d4d6d5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/match_layout_inning_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:text="@string/inning_1"
                android:gravity="center"

                />
            <TextView
                android:id="@+id/match_layout_inning_2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:text="@string/inning_2"
                android:gravity="center" />

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d4d6d5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:text="@string/batting" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/r"
                android:gravity="center"
                android:layout_margin="2dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/b"
                android:gravity="center"
                android:layout_margin="2dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/s_r"
                android:gravity="center"
                android:layout_margin="2dp"/>

        </LinearLayout>
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d4d6d5"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/player_score_recycler_view"
        android:layout_below="@+id/match_data_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_feature_will_be_added_soon"
        android:layout_centerInParent="true"/>

</RelativeLayout>